# docudex

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml
docudex/: cli.py  config.py  config.yaml
docudex/utils/: file_utils.py
src/docudex/: __main__.py  logger.py
src/docudex/utils/: package_info.py  paths.py
tests/: file_utils_test.py  global_config_test.py  test_logger.py
tests/test_utils/: test_package_info.py  test_paths.py
