[tool.poetry]
name = "docudex"
version = "0.0.1"
description = "A lightweight TUI for intelligent document analysis using LLMs and RAG pipelines."
authors = ["Lohith Srinivasaiah <lohith.srinivasaiah@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lohithsrinivasaiah/docudex"
keywords = ["ChatBot", "LangChain", "LLMs", "Python", "Textual", "Tui"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
platformdirs = "^4.3.7"
tomli = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
pytest = "^8.3.5"

[tool.poetry.scripts]
docudex = "docudex.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
