[tool.poetry]
name = "docudex"
version = "0.0.1"
description = "A lightweight TUI for intelligent document analysis using LLMs and RAG pipelines."
authors = ["Lohith Srinivasaiah <lohith.srinivasaiah@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lohithsrinivasaiah/docudex"
keywords = ["ChatBot", "LangChain", "LLMs", "Python", "Textual", "Tui"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
platformdirs = "^4.3.7"
tomli = "^2.2.1"
textual = "^3.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
coverage = "^7.8.0"
diff-cover = "^9.2.4"

[tool.poetry.scripts]
docudex = "docudex.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["docudex"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.coverage.html]
directory = "htmlcov"
